[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/optix/examples/ex*",
  "crates/optix/examples/ex*/device",
  "crates/optix/examples/rust/ex*",

  "xtask",

  "examples/cuda/vecadd",
  "examples/cuda/vecadd/kernels",
  "examples/cuda/gemm",
  "examples/cuda/gemm/kernels",

  "examples/optix/*",
  "examples/cuda/cpu/*",
  "examples/cuda/gpu/*",
]

exclude = [
    "crates/optix/examples/common"
]

[profile.dev.package.rustc_codegen_nvvm]
opt-level = 3
