[workspace]
resolver = "2"
members = [
  "crates/*",
  "crates/optix/examples/ex*",
  "crates/optix/examples/ex*/device",
  "crates/optix/examples/rust/ex*",

  "xtask",

  "examples/optix/*",
  "examples/cuda/cpu/*",
  "examples/cuda/gpu/*",
]

exclude = [
    "crates/cublas_sys.bak",
    "crates/find_cuda_helper.bak",
    "crates/optix/examples/common",
]

[profile.dev.package.rustc_codegen_nvvm]
opt-level = 3
